src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountCountry__c</fullName>
        <description>CSM - ACN - S0036 - Account Country</description>
        <label>Account Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountStatus__c</fullName>
        <description>CSM-ACN-S-0036 - Picklist that defines Account Status with values Active, Inactive.</description>
        <inlineHelpText>Please submit a VIA Ticket to MDM Team if you want to change value at the field on Validated Account (MDM Validation Status = Validated)</inlineHelpText>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Label__c</fullName>
        <description>CSM - ACN - S-0230 - Account Name and Country Concatenated.</description>
        <label>Account Label</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Full_Name__c</fullName>
        <description>ESPSFDCQI-14621</description>
        <formula>Owner.LastName + &apos; &apos; + Owner.FirstName</formula>
        <label>Account Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Manager__c</fullName>
        <description>ESPSFDCQI-15870</description>
        <formula>Owner.Manager.Full_User_Name__c</formula>
        <label>Account Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Po1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Po1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Requester_Email__c</fullName>
        <label>Approval Requester Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingContactFilterCriteria__c</fullName>
        <description>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</description>
        <inlineHelpText>Filter criteria to select billing contacts for the account or the comma separated list of email Ids to send billing statements.</inlineHelpText>
        <label>Billing Contact Filter Criteria</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingContactFormat__c</fullName>
        <description>Specifies Billing Contact setup format for a given account.</description>
        <inlineHelpText>Specifies Billing Contact setup format for a given account.</inlineHelpText>
        <label>Billing Contact Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comma Separated Values</fullName>
                </value>
                <value>
                    <fullName>Filter Criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingDayOfMonth__c</fullName>
        <description>The billing day of month for the account. Specific Day of Month, End of Month, etc</description>
        <inlineHelpText>The billing day of month for the account. Specific Day of Month, End of Month, etc</inlineHelpText>
        <label>Billing Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st of the Month</fullName>
                    <default>true</default>
                    <label>1st of the Month</label>
                </value>
                <value>
                    <fullName>2nd of the Month</fullName>
                </value>
                <value>
                    <fullName>3rd of the Month</fullName>
                </value>
                <value>
                    <fullName>4th of the Month</fullName>
                </value>
                <value>
                    <fullName>5th of the Month</fullName>
                </value>
                <value>
                    <fullName>6th of the Month</fullName>
                </value>
                <value>
                    <fullName>7th of the Month</fullName>
                </value>
                <value>
                    <fullName>8th of the Month</fullName>
                </value>
                <value>
                    <fullName>9th of the Month</fullName>
                </value>
                <value>
                    <fullName>10th of the Month</fullName>
                </value>
                <value>
                    <fullName>11th of the Month</fullName>
                </value>
                <value>
                    <fullName>12th of the Month</fullName>
                </value>
                <value>
                    <fullName>13th of the Month</fullName>
                </value>
                <value>
                    <fullName>14th of the Month</fullName>
                </value>
                <value>
                    <fullName>15th of the Month</fullName>
                </value>
                <value>
                    <fullName>16th of the Month</fullName>
                </value>
                <value>
                    <fullName>17th of the Month</fullName>
                </value>
                <value>
                    <fullName>18th of the Month</fullName>
                </value>
                <value>
                    <fullName>19th of the Month</fullName>
                </value>
                <value>
                    <fullName>20th of the Month</fullName>
                </value>
                <value>
                    <fullName>21st of the Month</fullName>
                </value>
                <value>
                    <fullName>22nd of the Month</fullName>
                </value>
                <value>
                    <fullName>23rd of the Month</fullName>
                </value>
                <value>
                    <fullName>24th of the Month</fullName>
                </value>
                <value>
                    <fullName>25th of the Month</fullName>
                </value>
                <value>
                    <fullName>26th of the Month</fullName>
                </value>
                <value>
                    <fullName>27th of the Month</fullName>
                </value>
                <value>
                    <fullName>28th of the Month</fullName>
                </value>
                <value>
                    <fullName>29th of the Month</fullName>
                </value>
                <value>
                    <fullName>30th of the Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CalendarCycleStart__c</fullName>
        <description>Indicates which calendar month the billing cycle will align to for a given account.</description>
        <inlineHelpText>Indicates which calendar month the billing cycle will align to for a given account.</inlineHelpText>
        <label>Calendar Cycle Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CertificateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated tax certificate. Applicable only when tax exempt.</description>
        <inlineHelpText>ID of the associated tax certificate. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Certificate</label>
        <referenceTo>Apttus_Config2__TaxCertificate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CreditMemoEmailTemplate__c</fullName>
        <description>Specifies the current selected Credit Memo Email Template of an account.</description>
        <inlineHelpText>Specifies the current selected Credit Memo Email Template of an account.</inlineHelpText>
        <label>Credit Memo Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultCreditMemoTemplate__c</fullName>
        <description>The name of the default Credit Memo template for generating Credit Memo documents</description>
        <inlineHelpText>The name of the default Credit Memo template for generating Credit Memo documents</inlineHelpText>
        <label>Default Credit Memo Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceStatementTemplate__c</fullName>
        <description>The name of the default template for generating invoice statements</description>
        <inlineHelpText>The name of the default template for generating invoice statements</inlineHelpText>
        <label>Default Invoice Statement Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceTemplate__c</fullName>
        <description>The name of the default invoice template for generating invoices</description>
        <inlineHelpText>The name of the default invoice template for generating invoices</inlineHelpText>
        <label>Default Invoice Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InvoiceEmailTemplate__c</fullName>
        <description>Specifies the current selected Invoice Email Template for a given account.</description>
        <inlineHelpText>Specifies the current selected Invoice Email Template for a given account.</inlineHelpText>
        <label>Invoice Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the default payment term associated with the account</description>
        <inlineHelpText>ID of the default payment term associated with the account</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExemptStatus__c</fullName>
        <description>The tax exempt status. Applicable only when tax exempt.</description>
        <inlineHelpText>The tax exempt status. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Exempt Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__TaxExempt__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExempt__c</fullName>
        <description>The tax exempt indicator for the account</description>
        <inlineHelpText>The tax exempt indicator for the account</inlineHelpText>
        <label>Tax Exempt ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avacare_CV_Signature_Date__c</fullName>
        <description>ESPSFDCQI-17854</description>
        <inlineHelpText>Please enter the Avacare CV Signature Date</inlineHelpText>
        <label>Avacare CV Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRS_Code__c</fullName>
        <inlineHelpText>Code for this account in the Billing and Revenue System (Americas). Not used in EMEA</inlineHelpText>
        <label>BRS Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Agency_Recruitement_Tracking__c</fullName>
        <description>PEP-ACN-CLM Agency Recruitment Tracking</description>
        <label>CLM Agency Recruitment Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consideration</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Internal Setup</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Closed - IQVIA withdrew</fullName>
                </value>
                <value>
                    <fullName>Closed - Partner withdrew</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <isActive>false</isActive>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>Contract Follow-Through</fullName>
                    <isActive>false</isActive>
                    <label>Contract Follow-Through</label>
                </value>
                <value>
                    <fullName>Contract Initiation</fullName>
                    <isActive>false</isActive>
                    <label>Contract Initiation</label>
                </value>
                <value>
                    <fullName>Contract Negociation</fullName>
                    <isActive>false</isActive>
                    <label>Contract Negociation</label>
                </value>
                <value>
                    <fullName>Contract Signature</fullName>
                    <isActive>false</isActive>
                    <label>Contract Signature</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSAT_Frequency_For_DATA__c</fullName>
        <label>C-SAT Frequency For DATA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Frequency_For_R_D__c</fullName>
        <label>C-SAT Frequency For R&amp;D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Frequency_For_TechSol__c</fullName>
        <label>C-SAT Frequency For Technology Solution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSH_Assets__c</fullName>
        <description>CSM-3224: TECH - Messaging for Web - Live Chat for IQVIA HIS product Team</description>
        <label>CSH Assets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSH_Self_Registration__c</fullName>
        <label>CSH Self-Registration</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technology Solutions</fullName>
                </value>
                <value>
                    <fullName>Information Offering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSH_SubType__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSM - QI - S-290 maintain the Case Sub type is visible in CSM for HO User.</description>
        <label>CSH Sub Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSM_C_SAT_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IQV - S-0205 - C-SAT Survey V1 - Qualtrics</description>
        <inlineHelpText>Click the checkbox to activate the C-SAT survey for this Account</inlineHelpText>
        <label>CSM C-SAT Activated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSM_C_SAT_Survey_Link__c</fullName>
        <description>IQV - CSM C-SAT V1 - Qualtrics</description>
        <inlineHelpText>Qualtrics C-SAT survey url for this Account.</inlineHelpText>
        <label>CSM C-SAT Survey Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Forbidden_Email_to_Case__c</fullName>
        <description>CSM-2056: TECH - Disable E2C address per Account</description>
        <inlineHelpText>Field used by Admin to disable E2C address for customer. Case is set to Abandoned status and a specific Email Template is sent to customer on case creation.</inlineHelpText>
        <label>Forbidden Email-to-Case</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTIVDN__c</fullName>
        <description>CSM-ACN-S-0036 - Textfield that will hold value for CTI VDN</description>
        <label>CTI VDN</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_SAT_Frequency_non_responded__c</fullName>
        <description>As per CSM-2345</description>
        <label>C-SAT Frequency non-responded For Techno</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C_SAT_Survey_Option__c</fullName>
        <description>This is used to define Survey options by Local Admins on the account</description>
        <label>C-SAT Survey Option</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TS Option B</fullName>
                    <label>TS - Generic question with link to sub survey</label>
                </value>
                <value>
                    <fullName>TS Option C</fullName>
                    <label>TS - Sub survey including generic question</label>
                </value>
                <value>
                    <fullName>TS Option D</fullName>
                    <label>TS - Generic question with Comment box</label>
                </value>
                <value>
                    <fullName>DATA Option B</fullName>
                    <label>DATA - Generic question with link to sub survey</label>
                </value>
                <value>
                    <fullName>DATA Option C</fullName>
                    <label>DATA - Sub survey including generic question</label>
                </value>
                <value>
                    <fullName>DATA Option D</fullName>
                    <label>DATA - Generic question with Comment box</label>
                </value>
                <value>
                    <fullName>R&amp;D Option B</fullName>
                    <label>R&amp;D - Generic question with link to sub survey</label>
                </value>
                <value>
                    <fullName>R&amp;D Option C</fullName>
                    <label>R&amp;D - Sub survey including generic question</label>
                </value>
                <value>
                    <fullName>R&amp;D Option D</fullName>
                    <label>R&amp;D - Generic question with Comment box</label>
                </value>
                <value>
                    <fullName>TS Option E</fullName>
                    <label>TS - T2 Generic question with link to sub survey</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1558 - This is &quot;Category&quot; value sent from MDM application (EBX5). This value is set on the global parent customer and will apply to all country level accounts beneath the global parent.</description>
        <formula>if(RecordType.DeveloperName==&apos;MDM_Validated_Account&apos;, Parent.MDM_Category__c,if(RecordType.DeveloperName==&apos;Global_Customer_Account&apos;,MDM_Category__c,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is &quot;Category&quot; value sent from MDM application (EBX5). This value is set on the global parent customer and will apply to all country level accounts beneath the global parent.</inlineHelpText>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Account_Compliance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created Under TPA-MC-ESPSFDCTPA-2260</description>
        <label>Client Account Compliance</label>
        <referenceTo>Account_Compliance__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Loyalty_Segment__c</fullName>
        <description>Created by TPA Module.</description>
        <inlineHelpText>Segmentation used when IMS sends out Customer Loyalty surveys.</inlineHelpText>
        <label>Client Loyalty Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Segment 1 Less than $10 M annual spend in that country</fullName>
                </value>
                <value>
                    <fullName>Segment 2  $5–10 M annual spend in that country</fullName>
                </value>
                <value>
                    <fullName>Segment 3  $3–5 M annual spend in that country</fullName>
                </value>
                <value>
                    <fullName>Segment 4  $1–3 M annual spend in that country</fullName>
                </value>
                <value>
                    <fullName>Segment 5  &lt; $1 M annual spend in that country (large markets only)</fullName>
                </value>
                <value>
                    <fullName>Segment 6  $750k –$1M annual spend in that country</fullName>
                </value>
                <value>
                    <fullName>Segment 7  $500k–750k annual spend in that country</fullName>
                </value>
                <value>
                    <fullName>Segment 8  $250k–500k annual spend in that country</fullName>
                </value>
                <value>
                    <fullName>Segment 9  &lt; $250k annual spend in that country</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Segment__c</fullName>
        <inlineHelpText>These are key industry segments that are used by finance to link revenue largely to Pharma manufacturing, biotech, generic and other non pharma areas – note it does NOT link to any pharma suppliers or associated companies (Medical devices, chemical etc.).</inlineHelpText>
        <label>Client Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pharmaceutical Company: Large</fullName>
                </value>
                <value>
                    <fullName>Pharmaceutical Company: Medium</fullName>
                </value>
                <value>
                    <fullName>Pharmaceutical Company: Small</fullName>
                </value>
                <value>
                    <fullName>Advertising Agency Company</fullName>
                </value>
                <value>
                    <fullName>Biotechnology Company</fullName>
                </value>
                <value>
                    <fullName>Financial Services Company</fullName>
                </value>
                <value>
                    <fullName>Generic Company</fullName>
                </value>
                <value>
                    <fullName>Government Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_the_requester__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When ticked, the field Country of the requester is mandatory when creating or updating a Case. This is valid to CSM,CSH and Email-to-Case channel.</inlineHelpText>
        <label>Country of the requester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cover_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cover Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerSegment__c</fullName>
        <description>ESPSFDCQI-15573</description>
        <label>Customer Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <description>CRM-MC-ESPSFDCQI-5566/ ESPSFDCQI-15573</description>
        <label>DEL Customer Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DATA_Global_Support_CSH_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DATA Global Support CSH Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPS_Force_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ESPSFDCQI-12068: To manually force account record for DPS screening only a single record is supported at a time.</description>
        <label>DPS Force Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPS_Status__c</fullName>
        <description>ESPSFDCQI-12068</description>
        <label>DPS Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Cleared</fullName>
                </value>
                <value>
                    <fullName>Not Screened</fullName>
                    <default>true</default>
                    <label>Not Screened</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Partner_Recruitment_tracking__c</fullName>
        <description>PEP-ACN-Data Partner Recruitment tracking</description>
        <label>Data Partner Recruitment tracking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consideration</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Internal Setup</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Closed - IQVIA withdrew</fullName>
                </value>
                <value>
                    <fullName>Closed - Partner withdrew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Risk_Assessed__c</fullName>
        <description>ESPSFDCQI-4268</description>
        <label>Date Risk Assessed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Risk_Expiry_Date__c</fullName>
        <description>ESPSFDCQI-4861</description>
        <formula>IF(NOT(ISBLANK(  Global_Date_Risk_Assessed__c ) ), ADDMONTHS(Global_Date_Risk_Assessed__c,6) , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Risk Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Risk_Assessed__c</fullName>
        <description>CRM-MC-ESPSFDCQI-6801/7923</description>
        <label>Date/Time Risk Assessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>CSM-ACN-S-0036 - Textfield that will hold value for Department.</description>
        <label>Department</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <description>ESPSFDCQI-17854</description>
        <inlineHelpText>Please select the designation</inlineHelpText>
        <label>Designation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>DO</fullName>
                </value>
                <value>
                    <fullName>NP</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PA-C</fullName>
                </value>
                <value>
                    <fullName>FNP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disable_CSH_P1_Case_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSM-2097: TECH - Disable CSH P1 Case creation per customer</description>
        <label>Disable CSH P1 Case Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>PEP-ACN-As an Alliance Manager i want to be able to complete division field when i setup an account i order to help manager partner accounts across countries, but below global parent</description>
        <label>Division</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocumentationURLLink__c</fullName>
        <description>CSM-ACN-S-0036 - URL field for Documentation link</description>
        <label>Documentation URL Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>CSM-ACN-S-0036 - Email Field for Account</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
</CustomObject>